--- a/branch.html
+++ b/branch.html
@@ -14,6 +14,7 @@
 
 <body>
   <h2>This is in the new branch</h2>
+  <h2>This is the PR</h2>
   <script src="js/scripts.js"></script>
 </body>
 </html>
