--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <h1>This is in master</h1>    
+    <h1>This is in master master</h1>    
   <script src="js/scripts.js"></script>
 </body>
 </html>
