--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head>
 
 <body>
-    <h1>This is in master branch</h1>    
+    <h1>This is in master branch</h1>   
+    <h2>This is test branch</h2> 
   <script src="js/scripts.js"></script>
 </body>
 </html>
