--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body>
     <h1>This is in master branch</h1>    
+    <h2>This is master branch</h2>
   <script src="js/scripts.js"></script>
 </body>
 </html>
