--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <h1>This is in master branch</h1>    
     <h2>This is master branch Anotheer change</h2>
+    <h3>This is the test branch</h3>
   <script src="js/scripts.js"></script>
 </body>
 </html>
