--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <h4>This is master branch</h4>
     <h4>This is just master master master</h4>
     <h5>new in master</h5>
+    <h3>New in branch</h3>
   <script src="js/scripts.js"></script>
 </body>
 </html>
