--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-  <div>
     <h1>This is in master branch</h1>    
     <h2>This is master branch Anotheer change</h2>
     <h3>This is the test branch</h3>
@@ -21,12 +20,9 @@
     <h4>This is just master master master</h4>
     <h5>new in master</h5>
     <h3>New in branch</h3>
-  </div>
-  
-  <div>
-    This is a new div
-  </div>
-    
+    <div>
+      <h2>This is new that will be reverted</h2>
+    </div>
   <script src="js/scripts.js"></script>
 </body>
 </html>
