This is a new DIV

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 </head>
 
 <body>
-    
+    <div>
+      This is a new DIV
+    </div>
   <script src="js/scripts.js"></script>
 </body>
 </html>
