--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <h4>This is master branch</h4>
     <h4>This is just master master master</h4>
     <h5>new in master, this is new in master</h5>
+    <div>
+      This is new in master
+    </div>
   <script src="js/scripts.js"></script>
 </body>
 </html>
