--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h4>This is just master master master</h4>
     <h5>new in master, this is new in master</h5>
     <div>
-      This is new in master
+      This is different in master
     </div>
   <script src="js/scripts.js"></script>
 </body>
