--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@
       This is test branch test brancg
     </div>
     <h1>test Branch</h1>
-    <h1>Test for PR</h1>
-    <h1>This will be the PR</h1>
-    <div>
-      <h1>Test Branch</h1>
-    </div>
+    <h1>This is branch 1</h1>
   <script src="js/scripts.js"></script>
 </body>
 </html>
